# cookieos-welcome

./: CMakeLists.txt  README.md
src/: Data.h  OsRelease.h  Panels.cpp  Panels.h  SysInfo.h  Theme.h  WelcomeWindow.cpp  WelcomeWindow.h  main.cpp
